z-index bug fixed; ::after helpers.

--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -25,7 +25,7 @@
   align-items: $align-items;
 }
 
-@mixin bgPos($bg-url, $pos-x, $pos-y: 0%) {
+@mixin bgPos($bg-url, $pos-x: false, $pos-y: 0%) {
   @if $pos-x == false {
     $pos-x: 0%;
   }
