--- a/src/scss/var.scss
+++ b/src/scss/var.scss
@@ -24,5 +24,6 @@ $sale-alert-color: #cc0f69;
 $new-alert-color: #3f7fc7;
 
 $light-green-color: #5cb8b3;
+$dark-color: #333333;
 
 $visitedLinkColor: $white;
